--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     // new change
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'    //new change 26/9/22
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+    implementation("com.google.code.gson:gson:2.9.1")
+
 }
