--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,7 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'    //new change 26/9/22
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation("com.google.code.gson:gson:2.9.1")
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 
 }
